--- a/FRONTEND/portfolioAngular/angular.json
+++ b/FRONTEND/portfolioAngular/angular.json
@@ -24,11 +24,9 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css"
+            "styles": ["src/styles.css"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.js"]
+            "scripts": []
           },
           "configurations": {
             "production": {
