--- a/FRONTEND/portfolioAngular/angular.json
+++ b/FRONTEND/portfolioAngular/angular.json
@@ -24,7 +24,8 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": ["src/styles.css"
+            "styles": ["node_modules/bootstrap/dist/css/bootstrap.css", 
+            "src/styles.css"
             ],
             "scripts": []
           },
